--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,26 +1,14 @@
-name: Test
-
+name: "test"
 on:
   push:
-    branches:
-      - main
 
 jobs:
-  test:
-    name: Test
+  push:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
-
-    - name: Get dependencies
-      run: go get -v -t -d ./...
-
-    - name: Test code
-      run: go test -v .
+      - shell: bash {0}
+      - name: test
+        run: |
+          date
+          exit 1
+          date # ここまで到達させたい
